--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: 醉里
 subtitle: ''
 description: '醉里挑灯看剑，梦回吹角连营'
-keywords:
-author: 
+keywords: 醉里博客
+author: 小豪
 language: zh-CN
 timezone: ''
 
@@ -110,8 +110,8 @@ deploy:
 # https://github.com/Rozbo/hexo-abbrlink
 # abbrlink config
 abbrlink:
-  alg: crc32      #support crc16(default) and crc32
-  rep: hex        #support dec(default) and hex
+  alg: crc16      #support crc16(default) and crc32
+  rep: dex        #support dec(default) and hex
   drafts: false   #(true)Process draft,(false)Do not process draft. false(default) 
   # Generate categories from directory-tree
   # depth: the max_depth of directory-tree you want to generate, should > 0
