--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: ''
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://202271.xyz
 #permalink: :year/:month/:day/:title/
-permalink: post/:id/
+permalink: post/:abbrlink/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
