--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1139,12 +1139,4 @@ static_prefix:
   twikoo: https://lib.baomitu.com/twikoo/1.5.11/
 
   hint: https://lib.baomitu.com/hint.css/2.7.0/
-  # 订阅 RSS
-
-feed:
-
-    type: atom
-
-    path: atom.xml
-
-    limit: false
+  rss: /atom.xml
