Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -43,3 +43,7 @@ links:
       intro: 随便写写
       link: https://diary.bid/
       avatar: https://diary.bid/wp-content/uploads/2022/11/%E4%B8%8B%E8%BD%BD.jpg
+    - title: 安知鱼
+      link: "https://anzhiy.cn/ "
+      intro: 生活明朗，万物可爱
+      avatar: https://image.anzhiy.cn/adminuploads/1/2022/09/15/63232b7d91d22.jpg
