Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -47,3 +47,7 @@ links:
       link: "https://anzhiy.cn/ "
       intro: 生活明朗，万物可爱
       avatar: https://image.anzhiy.cn/adminuploads/1/2022/09/15/63232b7d91d22.jpg
+    - title: 张洪Heo
+      link: https://blog.zhheo.com/
+      intro: 分享设计与科技生活
+      avatar: https://img.zhheo.com/i/2022/08/19/62ff32fa28da1.png
