Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -51,3 +51,7 @@ links:
       link: https://blog.zhheo.com/
       intro: 分享设计与科技生活
       avatar: https://img.zhheo.com/i/2022/08/19/62ff32fa28da1.png
+    - title: 青衣
+      link: https://www.qingyi1220.cn/
+      intro: 世界既不黑也不白，而是一道精致的灰
+      avatar: https://www.qingyi1220.cn/img/Tsingyi.jpg
