Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -55,3 +55,10 @@ links:
       link: https://www.qingyi1220.cn/
       intro: 世界既不黑也不白，而是一道精致的灰
       avatar: https://www.qingyi1220.cn/img/Tsingyi.jpg
+    - title: XKの博客
+      link: https://www.xukaiyyds.cn/
+      avatar: https://www.xukaiyyds.cn/img/favicon.png
+      intro: 一个干净整洁的个人博客
+    - avatar: https://cdn.dusays.com/avatar.png
+      link: https://dusays.com/
+      title: 杜老师说
