Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -62,3 +62,7 @@ links:
     - avatar: https://cdn.dusays.com/avatar.png
       link: https://dusays.com/
       title: 杜老师说
+    - title: 8：9社区
+      intro: 用一生去抵达遥远的未来
+      avatar: https://cdn.sady0.com/pic/%E8%B5%84%E6%BA%90%2050000.png
+      link: https://8b9.cn
