Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -66,3 +66,11 @@ links:
       intro: 用一生去抵达遥远的未来
       avatar: https://cdn.sady0.com/pic/%E8%B5%84%E6%BA%90%2050000.png
       link: https://8b9.cn
+    - title: 小染笔记
+      intro: 遇见即是上上签.
+      link: https://sady0.com/
+      avatar: https://cdn.sady0.com/pic/91531896_p0.jpg
+    - title: Mycpen
+      link: https://cpen.top/
+      avatar: https://image.cpen.top/image/avatar.jpg
+      intro: 这是一个有趣的博客
