Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -74,3 +74,7 @@ links:
       link: https://cpen.top/
       avatar: https://image.cpen.top/image/avatar.jpg
       intro: 这是一个有趣的博客
+    - title: Xlenco
+      link: https://xlenco.eu.org/
+      intro: 最好的地方,是没去过的地方。最好的时光，是回不来的时光。
+      avatar: https://xlenco.eu.org/img/head.webp
