--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -245,7 +245,7 @@ web_analytics:  # 网页访问统计
 
   # 遵循访客浏览器"请勿追踪"的设置，如果开启则不统计其访问
   # Follow the "Do Not Track" setting of the visitor's browser
-  # See: https://www.w3.org/TR/tracking-dnt/
+  # See: http://www.w3.org/TR/tracking-dnt/
   follow_dnt: true
 
   # 百度统计的 Key，值需要获取下方链接中 `hm.js?` 后边的字符串
@@ -863,7 +863,7 @@ waline:
   meta: ['nick', 'mail', 'link']
   requiredMeta: ['nick']
   lang: 'zh-CN'
-  emoji: ['https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo']
+  emoji: ['https://unpkg.com/@waline/emojis@1.1.0/weibo']
   dark: 'html[data-user-color-scheme="dark"]'
   wordLimit: 0
   pageSize: 8
