--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: 醉里
-subtitle: ''
-description: '醉里挑灯看剑，梦回吹角连营'
-keywords: 醉里博客
+subtitle: '醉里博客——小豪的个人博客'
+description: '醉里博客——小豪的个人博客'
+keywords: 醉里博客,hexo,fluid主题,typecho,博客,开往,8:9社区
 author: 小豪
 language: zh-CN
 timezone: ''
