--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -78,3 +78,11 @@ links:
       link: https://xlenco.eu.org/
       intro: 最好的地方,是没去过的地方。最好的时光，是回不来的时光。
       avatar: https://xlenco.eu.org/img/head.webp
+    - title: 兔芽网
+      intro: 优麦兔旗下新松计划产品
+      link: https://www.tuya.ink/
+      avatar: https://www.tuya.ink/wp-content/uploads/2022/12/72d5fbcf44170825.png
+    - title: B0ae计划
+      intro: 利她，有价值，不打扰
+      link: https://b0ae.cn
+      avatar: https://b0ae.cn/tx/blog.png
