Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -82,3 +82,7 @@ links:
       intro: 优麦兔旗下新松计划产品
       link: https://www.tuya.ink/
       avatar: https://www.tuya.ink/wp-content/uploads/2022/12/72d5fbcf44170825.png
+    - title: LyShark - 孤风洗剑
+      intro: 道，可道，非常道；名，可名，非常名。—— 老子《道德经》
+      link: https://www.lyshark.com/
+      avatar: https://www.lyshark.com/images/baidu_logo.png
