--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -353,7 +353,9 @@ navbar:
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: 'Admin', link: '/admin/', icon: "iconfont icon-users" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
-    - { key: "开往", link: "https://travellings.cn", icon: "" }
+    - { key: "开往", link: "https://travellings.cn", icon: "iconfont icon-linkedin-fill" }
+    - { key: "个站商店~虫洞", link: "https://storeweb.cn/s/1562", icon: "iconfont icon-line-fill" }
+
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
