Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -47,21 +47,21 @@ links:
       link: "https://anzhiy.cn/ "
       intro: 生活明朗，万物可爱
       avatar: https://image.anzhiy.cn/adminuploads/1/2022/09/15/63232b7d91d22.jpg
+    - avatar: https://cdn.dusays.com/avatar.png
+      link: https://dusays.com/
+      title: 杜老师说
     - title: 张洪Heo
       link: https://blog.zhheo.com/
       intro: 分享设计与科技生活
       avatar: https://img.zhheo.com/i/2022/08/19/62ff32fa28da1.png
-    - title: 青衣
-      link: https://www.qingyi1220.cn/
-      intro: 世界既不黑也不白，而是一道精致的灰
-      avatar: https://www.qingyi1220.cn/img/Tsingyi.jpg
     - title: XKの博客
       link: https://www.xukaiyyds.cn/
       avatar: https://www.xukaiyyds.cn/img/favicon.png
       intro: 一个干净整洁的个人博客
-    - avatar: https://cdn.dusays.com/avatar.png
-      link: https://dusays.com/
-      title: 杜老师说
+    - title: 青衣
+      link: https://www.qingyi1220.cn/
+      intro: 世界既不黑也不白，而是一道精致的灰
+      avatar: https://www.qingyi1220.cn/img/Tsingyi.jpg
     - title: 8：9社区
       intro: 用一生去抵达遥远的未来
       avatar: https://cdn.sady0.com/pic/%E8%B5%84%E6%BA%90%2050000.png
@@ -86,3 +86,7 @@ links:
       intro: 道，可道，非常道；名，可名，非常名。—— 老子《道德经》
       link: https://www.lyshark.com/
       avatar: https://www.lyshark.com/images/baidu_logo.png
+    - title: INJU银烛
+      link: https://inju.eu.org/
+      intro: 海纳百川，有容乃大
+      avatar: https://inju0524.github.io/img/head.png
