--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -90,3 +90,32 @@ links:
       link: https://inju.eu.org/
       intro: 海纳百川，有容乃大
       avatar: https://inju0524.github.io/img/head.png
+    - title: 淇云博客
+      link: https://www.pengqi.club/
+      intro: 
+      avatar: https://tc.pengqi.club/images/2023/01/03/6a3bafbd4004.png
+    - title: Pil0tXia
+      link: https://www.pil0txia.com/
+      intro: 
+      avatar: https://static.pil0txia.com/assets/03_3_600p.webp
+    - title: Ryan’s Blog
+      link: https://www.moezz.cn/
+      intro: 
+      avatar: https://mcdn.moezz.cn/avatar.jpg
+    - title: Phbeats-Blog
+      link: https://blog.phbeats.cn/
+      intro: 记录学习历程和生活感悟
+      avatar: https://blog.phbeats.cn/img/QQ_avatar.jpg
+    - title: Akilarの糖果屋
+      link: https://akilar.top/
+      intro: 期待您的光临！
+      avatar: https://npm.elemecdn.com/akilar-friends@latest/avatar/akilar.top.jpg
+    - title: 又见苍岚
+      link: https://www.zywvvd.com
+      intro: 蓝天依旧，明眸如初
+      avatar: https://www.zywvvd.com/image/avatar.png
+    - title: MghyのBlog
+      link: https://lmghy.top/
+      avatar: https://tu.mghy.top/i/2022/12/10/j364kb-1.webp
+      intro: 为了明天的摸鱼所以现在摸鱼ing
+
