--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -479,7 +479,80 @@ setInterval("createtime()",250);
 
 <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 <script type="text/javascript" src="https://js.users.51.la/21534687.js"></script>
- '
+ <div id="badge">
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://hexo.io" class="github-badge" title="由 Hexo 强力驱动 ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                Powered
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #007ec6;">
+                Hexo
+            </span>
+        </a>
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://github.com" class="github-badge" title="项目托管于 Github ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                Source
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4dc820;">
+                Github
+            </span>
+        </a>
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://netlify.com" class="github-badge" title="由 Netlify 提供免费的CDN服务 ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                Hosted
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #01ad9f;">
+                Netlify
+            </span>
+        </a>
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://github.com/fluid-dev/hexo-theme-fluid" class="github-badge" title="由 Fluid 提供主题 ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                Theme
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #8a2be2;">
+                Fluid
+            </span>
+        </a>
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://dnspod.cn" class="github-badge" title="DNSPOD 提供的免费DNS解析和SSL加密 ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                DNS
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #007ec6;">
+                DNSPOD
+            </span>
+        </a>
+    
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://creativecommons.org/licenses/by-nc-sa/4.0" class="github-badge" title="本站使用 署名-非商业性使用-相同方式共享 4.0 许可协议进行许可 ">
+            <!-- Lable -->
+             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
+                ©
+            </span>
+            <!-- Message -->
+            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #c4269e;">
+                BY-NC-SA
+            </span>
+        </a>
+    
+</div>
+  
+  </div>
+  
+  </footer>
+'
 
   # 展示网站的 PV、UV 统计数
   # Display website PV and UV statistics
