--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -429,57 +429,81 @@ open_graph:
 footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
-  content: '
-    <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
-    <i class="iconfont icon-love"></i>
-    <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a>
-    <i class="iconfont icon-love"></i>
-    <a href="https://icp.gov.moe/?keyword=20226555" target="_blank">萌ICP备20226555号</a>
-    <span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+  content: ＇<!-- 运行时间 -->
+    <div class="running-time">
+    <span id="RunTime_span">加载中...</span>
+    <script>
+        
+        var StartTime = new Date('2022/7/15 00:00:00'); // 获取开始时间
 
-<script>
+        function RunTime(){
+            window.setTimeout("show_runtime()", 1000);
+            var NowTime = new Date(); // 获取现在的时间
 
-    var now = new Date(); 
+            Time = (NowTime.getTime() - StartTime.getTime()) / 1000; // 计算已存活时间(s)
 
-    function createtime() { 
+            MaximumUnit = 365 * 24 * 60 * 60; // 最大单位
 
-        var grt= new Date("09/01//2022 17:00:00");//在此处修改你的建站时间
+            Year = Time / MaximumUnit;
+            YearINT = Math.floor(Year);
 
-        now.setTime(now.getTime()+250); 
+            Month = (Year - YearINT) * 12;
+            MonthINT = Math.floor(Month);
 
-        days = (now - grt ) / 1000 / 60 / 60 / 24; dnum = Math.floor(days); 
+            Day = (Month - MonthINT) * ((7*31+5*30 )/12); //平均下大月小月天数，防止出现过大的偏差
+            DayINT = Math.floor(Day);
 
-        hours = (now - grt ) / 1000 / 60 / 60 - (24 * dnum); hnum = Math.floor(hours); 
+            Hour = (Day - DayINT) * 24;
+            HourINT = Math.floor(Hour);
 
-        if(String(hnum).length ==1 ){hnum = "0" + hnum;} minutes = (now - grt ) / 1000 /60 - (24 * 60 * dnum) - (60 * hnum); 
+            Minute = (Hour - HourINT) * 60;
+            MinuteINT = Math.floor(Minute);
 
-        mnum = Math.floor(minutes); if(String(mnum).length ==1 ){mnum = "0" + mnum;} 
-
-        seconds = (now - grt ) / 1000 - (24 * 60 * 60 * dnum) - (60 * 60 * hnum) - (60 * mnum); 
-
-        snum = Math.round(seconds); if(String(snum).length ==1 ){snum = "0" + snum;} 
-
-        document.getElementById("timeDate").innerHTML = "本站已安全运行 "+dnum+" 天 "; 
-
-        document.getElementById("times").innerHTML = hnum + " 小时 " + mnum + " 分 " + snum + " 秒"; 
-
-    } 
-
-setInterval("createtime()",250);
+            Second = Math.floor((Minute - MinuteINT) * 60);
 
 
-</script>
- <a href="https://travellings.cn/" target="_blank" rel="noopener" title="开往-友链接力">
-
-    <img src="https://travellings.cn/assets/logo.gif" alt="开往-友链接力" width="120">
-
-</a>
-
-<span id="jinrishici-sentence">正在加载今日诗词....</span>
-
-<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
-<script type="text/javascript" src="https://js.users.51.la/21534687.js"></script>
- <div id="badge">
+            RunTime_span.innerHTML = "本站已经运行了" + YearINT + "年 " + MonthINT + "月 " + DayINT + "天 " + HourINT + "时 " + MinuteINT + "分 " + Second + "秒";
+            // 将数据替换到Span上
+        };
+        setInterval("RunTime()", 1000); // 重复运行，时刻更新数据
+        RunTime();
+    </script> 
+</div>
+  
+    <!-- 备案信息 -->
+    
+    
+      <!-- 备案信息 ICP for Moe -->
+      <div class="moe_beian">
+    <span>
+      <a href="https://icp.gov.moe/" target="_blank" rel="nofollow noopener">
+        
+      </a>
+    </span>
+    
+      
+        <span title="233333">
+          <a
+            href="https://icp.gov.moe/?keyword=20226555"
+            rel="nofollow noopener"
+            class="beian-moe"
+            target="_blank"
+          >
+            
+              <span style="visibility: hidden; width: 0">|</span>
+              <img src="/img/moe_beian.png" srcset="/img/loading.gif" lazyload alt="moe-icon" height="20px" width="20px"/>
+            
+            <span>萌ICP备20226555号</span>
+          </a>
+        </span>
+      
+    
+  </div>
+  
+    
+    
+    
+    <!-- 徽章 --><div id="badge">
     
         <a style="color: #FFF;" target="_blank" rel="noopener" href="http://hexo.io" class="github-badge" title="由 Hexo 强力驱动 ">
             <!-- Lable -->
@@ -492,7 +516,7 @@ setInterval("createtime()",250);
             </span>
         </a>
     
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://github.com" class="github-badge" title="项目托管于 Github ">
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="https://github.com" class="github-badge" title="项目托管于 Github ">
             <!-- Lable -->
              <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
                 Source
@@ -514,7 +538,7 @@ setInterval("createtime()",250);
             </span>
         </a>
     
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://github.com/fluid-dev/hexo-theme-fluid" class="github-badge" title="由 Fluid 提供主题 ">
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="https://github.com/fluid-dev/hexo-theme-fluid" class="github-badge" title="由 Fluid 提供主题 ">
             <!-- Lable -->
              <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
                 Theme
@@ -525,14 +549,14 @@ setInterval("createtime()",250);
             </span>
         </a>
     
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://dnspod.cn" class="github-badge" title="DNSPOD 提供的免费DNS解析和SSL加密 ">
+        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://cloudflare.com" class="github-badge" title="提供的免费DNS解析和SSL加密 ">
             <!-- Lable -->
              <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
                 DNS
             </span>
             <!-- Message -->
             <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #007ec6;">
-                DNSPOD
+                Cloudflare
             </span>
         </a>
     
