--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -429,154 +429,7 @@ open_graph:
 footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
-  content: ＇<!-- 运行时间 -->
-    <div class="running-time">
-    <span id="RunTime_span">加载中...</span>
-    <script>
-        
-        var StartTime = new Date('2022/7/15 00:00:00'); // 获取开始时间
-
-        function RunTime(){
-            window.setTimeout("show_runtime()", 1000);
-            var NowTime = new Date(); // 获取现在的时间
-
-            Time = (NowTime.getTime() - StartTime.getTime()) / 1000; // 计算已存活时间(s)
-
-            MaximumUnit = 365 * 24 * 60 * 60; // 最大单位
-
-            Year = Time / MaximumUnit;
-            YearINT = Math.floor(Year);
-
-            Month = (Year - YearINT) * 12;
-            MonthINT = Math.floor(Month);
-
-            Day = (Month - MonthINT) * ((7*31+5*30 )/12); //平均下大月小月天数，防止出现过大的偏差
-            DayINT = Math.floor(Day);
-
-            Hour = (Day - DayINT) * 24;
-            HourINT = Math.floor(Hour);
-
-            Minute = (Hour - HourINT) * 60;
-            MinuteINT = Math.floor(Minute);
-
-            Second = Math.floor((Minute - MinuteINT) * 60);
-
-
-            RunTime_span.innerHTML = "本站已经运行了" + YearINT + "年 " + MonthINT + "月 " + DayINT + "天 " + HourINT + "时 " + MinuteINT + "分 " + Second + "秒";
-            // 将数据替换到Span上
-        };
-        setInterval("RunTime()", 1000); // 重复运行，时刻更新数据
-        RunTime();
-    </script> 
-</div>
-  
-    <!-- 备案信息 -->
-    
-    
-      <!-- 备案信息 ICP for Moe -->
-      <div class="moe_beian">
-    <span>
-      <a href="https://icp.gov.moe/" target="_blank" rel="nofollow noopener">
-        
-      </a>
-    </span>
-    
-      
-        <span title="233333">
-          <a
-            href="https://icp.gov.moe/?keyword=20226555"
-            rel="nofollow noopener"
-            class="beian-moe"
-            target="_blank"
-          >
-            
-              <span style="visibility: hidden; width: 0">|</span>
-              <img src="/img/moe_beian.png" srcset="/img/loading.gif" lazyload alt="moe-icon" height="20px" width="20px"/>
-            
-            <span>萌ICP备20226555号</span>
-          </a>
-        </span>
-      
-    
-  </div>
-  
-    
-    
-    
-    <!-- 徽章 --><div id="badge">
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://hexo.io" class="github-badge" title="由 Hexo 强力驱动 ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                Powered
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #007ec6;">
-                Hexo
-            </span>
-        </a>
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="https://github.com" class="github-badge" title="项目托管于 Github ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                Source
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4dc820;">
-                Github
-            </span>
-        </a>
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://netlify.com" class="github-badge" title="由 Netlify 提供免费的CDN服务 ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                Hosted
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #01ad9f;">
-                Netlify
-            </span>
-        </a>
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="https://github.com/fluid-dev/hexo-theme-fluid" class="github-badge" title="由 Fluid 提供主题 ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                Theme
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #8a2be2;">
-                Fluid
-            </span>
-        </a>
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://cloudflare.com" class="github-badge" title="提供的免费DNS解析和SSL加密 ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                DNS
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #007ec6;">
-                Cloudflare
-            </span>
-        </a>
-    
-        <a style="color: #FFF;" target="_blank" rel="noopener" href="http://creativecommons.org/licenses/by-nc-sa/4.0" class="github-badge" title="本站使用 署名-非商业性使用-相同方式共享 4.0 许可协议进行许可 ">
-            <!-- Lable -->
-             <span class="badge-lable badge-subject" style="padding: 4px 4px 4px 6px; background-color: #4D4D4D">
-                ©
-            </span>
-            <!-- Message -->
-            <span class="badge-message badge-subject" style="padding: 4px 4px 4px 6px; background-color: #c4269e;">
-                BY-NC-SA
-            </span>
-        </a>
-    
-</div>
-  
-  </div>
-  
-  </footer>
-'
+  content: ''
 
   # 展示网站的 PV、UV 统计数
   # Display website PV and UV statistics
