--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1,4 +1,4 @@
-8#---------------------------
+#---------------------------
 # Hexo Theme Fluid
 # Author: Fluid-dev
 # Github: https://github.com/fluid-dev/hexo-theme-fluid
@@ -7,7 +7,7 @@
 # 你可以从指南中获得更详细的说明
 #
 # Guide: https://hexo.fluid-dev.com/docs/en/guide/
-# You can get more detailed help from the guide
+# You can get more detailed help from the guid
 #---------------------------
 
 
