--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -429,7 +429,8 @@ open_graph:
 footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
-  content: '<a href="https://www.pengqi.club/" target="_blank">淇云博客</a>'
+  content: '<a href="https://www.pengqi.club/" target="_blank">淇云博客</a> <a href="https:" target="_blank">evolution-host</a>'
+
 
   # 展示网站的 PV、UV 统计数
   # Display website PV and UV statistics
