--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -429,7 +429,37 @@ open_graph:
 footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
-  content: '<a href="https://www.pengqi.club/" target="_blank">淇云博客</a> <a href="https://evolution-host.com/" target="_blank">evolution-host</a>'
+  content: '<a href="https://www.pengqi.club/" target="_blank">淇云博客</a> <a href="https://evolution-host.com/" target="_blank">evolution-host</a>
+  <!-- Load TweenLite -->
+
+<script src="https://cdn.jsdelivr.net/npm/greensock@1.20.2/dist/TweenLite.js"></script>
+
+ 
+
+<!-- Copyrighted cubism SDK -->
+
+<script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
+
+<!-- Load Pixi (dependency for cubism 2/4 integrated loader) -->
+
+<script src="https://cdn.jsdelivr.net/npm/pixi.js@5.3.6/dist/pixi.min.js"></script>
+
+<!-- Load cubism 4 integrated loader -->
+
+<script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display@0.3.1/dist/cubism4.min.js"></script>
+
+ 
+
+<!-- Load pio and alternative loader -->
+
+<link href="https://cdn.jsdelivr.net/gh/journey-ad/blog-img@76ba2b3/live2d/lib/pio.css" rel="stylesheet" type="text/css"/>
+
+<script src="https://cdn.jsdelivr.net/gh/journey-ad/blog-img@76ba2b3/live2d/lib/pio.js"></script>
+
+<script src="https://cdn.jsdelivr.net/gh/journey-ad/blog-img@76ba2b3/live2d/lib/pio_sdk4.js"></script>
+
+<script src="https://cdn.jsdelivr.net/gh/journey-ad/blog-img@76ba2b3/live2d/lib/load.js"></script>
+  '
 
 
   # 展示网站的 PV、UV 统计数
