--- a/_config.yml
+++ b/_config.yml
@@ -182,4 +182,35 @@ feed:
     type: atom
     path: atom.xml
     limit: false
+live2d:
+
+  enable: true
+
+  scriptFrom: local
+
+  pluginRootPath: live2dw/
+
+  pluginJsPath: lib/
+
+  pluginModelPath: assets/
+
+  tagMode: false
+
+  debug: false
+
+  model:
+
+    use: live2d-widget-model-koharu
+
+  display:
+
+    position: right
+
+    width: 150
+
+    height: 300
+
+  mobile:
+
+    show: true
     
