Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -3,10 +3,10 @@ navbar:
   ground_glass:
     enable: true
 index:
-  banner_img: https://pic.imgdb.cn/item/6393f03ab1fccdcd3610d927.jpg
+  banner_img: https://i.imgtg.com/2023/02/13/dMWqD.jpg
   banner_img_height: 100
   slogan:
-    text: 醉里挑灯看剑，梦回吹角连营。
+    text: Welcome To My Website 送你的话：等风来，不如追风去。
 post:
   banner_img: /images/uploads/1616421416500-wallhaven-rddv31.jpg
   banner_img_height: 70
