--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -6,7 +6,7 @@ index:
   banner_img: https://i.imgtg.com/2023/02/13/dMWqD.jpg
   banner_img_height: 100
   slogan:
-    text: Welcome To My Website 送你的话：等风来，不如追风去。
+    text: Welcome To My Website.等风来，不如追风去
 post:
   banner_img: /images/uploads/1616421416500-wallhaven-rddv31.jpg
   banner_img_height: 70
