--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -138,3 +138,7 @@ links:
       intro: 一个不知道写啥的的小破站
       link: https://www.yunio.cn/
       avatar: https://www.yunio.cn/wp-content/uploads/2023/01/1672925868-newlogo.svg
+    - title: Sh1n3zZ の 小屋
+      link: https://shinezz.cc/
+      intro: Sh1n3zZ の 小屋 - 一个小小秘密基地ヾ(^▽^*)))
+      avatar: https://shinezz.cc/img/ServerIcon_Flu.png
