--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -139,6 +139,6 @@ links:
       link: https://www.yunio.cn/
       avatar: https://www.yunio.cn/wp-content/uploads/2023/01/1672925868-newlogo.svg
     - title: Sh1n3zZ の 小屋
-      link: https://shinezz.cc/
+      link: https://blog.shinezz.cc/
       intro: Sh1n3zZ の 小屋 - 一个小小秘密基地ヾ(^▽^*)))
-      avatar: https://shinezz.cc/img/ServerIcon_Flu.png
+      avatar: https://blog.shinezz.cc/img/ServerIcon_Flu.png
