--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -353,9 +353,9 @@ navbar:
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: 'Admin', link: '/admin/', icon: "iconfont icon-users" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
-    - { key: "开往", link: "https://travellings.cn", icon: "iconfont icon-linkedin-fill" }
+    - { key: "开往", link: "https://travellings.cn/go.html", icon: "iconfont icon-linkedin-fill" }
     - { key: "个站商店~虫洞", link: "https://storeweb.cn/s/1562", icon: "iconfont icon-line-fill" }
-    - { key: "旗下站点", link: "https://home.202271.xyz/", icon: "iconfont icon-home-fill" }
+    - { key: "朋友圈", link: "https://202271.xyz/pyq", icon: "iconfont icon-home-fill" }
 
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
