Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -145,3 +145,7 @@ links:
     - link: https://linguoguang.com/
       title: 木木困玉光的博客
       avatar: /images/uploads/yutzi.jpg
+    - title: 夜雨炊烟
+      intro: 唯有热爱，可抵岁月漫长。
+      link: https://yychuiyan.com/
+      avatar: https://op.yychuiyan.com/avatar.webp
