Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -149,3 +149,15 @@ links:
       intro: 唯有热爱，可抵岁月漫长。
       link: https://yychuiyan.com/
       avatar: https://op.yychuiyan.com/avatar.webp
+    - title: 徐乔年
+      intro: 不惊、不惑、不扰。
+      avatar: https://hsuqnian.top/picture.png
+      link: https://hsuqnian.top/
+    - title: 小蔡博客
+      link: https://www.caipeixuan.com/
+      intro: 小蔡博客—走在寻找灵魂的路上
+      avatar: https://www.caipeixuan.com/wp-content/uploads/2023/04/logo_20230422_uugai.com_1682137275937-e1682137339562.png
+    - avatar: https://upload.storeweb.cn/upload/member/avatar/1/6899da3aabb91d5b6720bfd3e7ea101d.jpg
+      title: 个站商店
+      link: https://storeweb.cn/
+      intro: 个站商店
