--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 醉里
+title: 醉里博客
 subtitle: '醉里博客——小豪的个人博客'
 description: '醉里博客——小豪的个人博客'
-keywords: 醉里博客,hexo,fluid主题,typecho,博客,开往,8:9社区
+keywords: 醉里博客,hexo美化,fluid主题,个站商店,xyz域名,中文博客,typecho,个人博客
 author: 小豪
 language: zh-CN
 timezone: ''
