--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -442,14 +442,13 @@ Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;
 
 a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);
 
-runtime_span.innerHTML="醉里已经运行了: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>
-  <img src="https://ghchart.rshah.org/xiaohao8" alt="xiaohao8's Github chart" />'
+runtime_span.innerHTML="醉里已经运行了: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>'
 
 
    # 展示网站的 PV、UV 统计数
    # Display website PV and UV statistics
   statistics:
-    enable: false
+    enable: true
 
     # 统计数据来源，使用 leancloud 需要设置 `web_analytics: leancloud` 中的参数；使用 busuanzi 不需要额外设置，但是有时不稳定，另外本地运行时 busuanzi 显示统计数据很大属于正常现象，部署后会正常
     # Data source. If use leancloud, you need to set the parameter in `web_analytics: leancloud`
@@ -593,7 +592,7 @@ post:
     # 浏览量计数
     # Number of visits
     views:
-      enable: false
+      enable: true
       # 统计数据来源
       # Data Source
       # Options: busuanzi | leancloud
