--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1,3 +1,4 @@
+custom_head: <meta name="baidu-site-verification" content="codeva-aodBntuOs9" />
 #---------------------------
 # Hexo Theme Fluid
 # Author: Fluid-dev
