Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -161,3 +161,19 @@ links:
       title: 个站商店
       link: https://storeweb.cn/
       intro: 个站商店
+    - avatar: https://pic.imgdb.cn/item/63f16cddf144a010070697c8.jpg
+      link: https://www.gan1ser.top/
+      intro: 紫箫吟断，素笺恨切
+      title: GanSer
+    - title: 动荡の初二少年
+      intro: 一个少年的博客
+      link: https://www.yt-blog.top/
+      avatar: https://npm.elemecdn.com/ytblogimg/webp/logo.webp
+    - title: Jiewen’s Blog
+      link: https://www.jiewen.run
+      intro: 行动起来，活在当下
+      avatar: https://www.jiewen.run/upload/jiewen_icon.png
+    - avatar: https://b.925i.cn/logo
+      link: https://b.925i.cn/
+      title: 小莫唐尼
+      intro: 一个爱凑热闹、喜欢捣鼓前端的博主。
