--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -352,11 +352,12 @@ navbar:
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
-    - { key: 'Admin', link: '/admin/', icon: "iconfont icon-users" }
-    - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - { key: 'Admin', link: 'https://admin.202271.xyz/', icon: "iconfont icon-users" }
     - { key: "开往", link: "https://travellings.cn/go.html", icon: "iconfont icon-linkedin-fill" }
     - { key: "个站商店~虫洞", link: "https://storeweb.cn/s/1562", icon: "iconfont icon-line-fill" }
     - { key: "朋友圈", link: "https://202271.xyz/pyq", icon: "iconfont icon-home-fill" }
+    - { key: "说说", link: "https://202271.xyz/talks", icon: "iconfont icon-home-fill" }
+    - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
 
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
