--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -177,3 +177,7 @@ links:
       link: https://b.925i.cn/
       title: 小莫唐尼
       intro: 一个爱凑热闹、喜欢捣鼓前端的博主。
+    - link: https://www.nmwbk.com
+      title: 牛魔博客
+      avatar: https://oss.nmwbk.com/wp-content/uploads/2020/10/20201010141735736.png
+      intro: 做一个有深度的博客
