Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -181,3 +181,6 @@ links:
       title: 牛魔博客
       avatar: https://oss.nmwbk.com/wp-content/uploads/2020/10/20201010141735736.png
       intro: 做一个有深度的博客
+    - link: http://www.91667.cn
+      title: 驾校宝典
+      avatar: /images/uploads/1616421595370-wallhaven-q6ov7d.jpg
