--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -446,7 +446,8 @@ a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*6
 
 runtime_span.innerHTML="醉里已经运行了: "+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>
  
- <a href="http://www.91667.cn">驾校宝典</a>'
+ <a href="http://www.91667.cn">驾校宝典</a>
+ <a href="https://didi.seowhy.com">搜外友链</a>'
 
 
    # 展示网站的 PV、UV 统计数
