Update settings “fluid”

--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -184,3 +184,7 @@ links:
     - link: http://www.91667.cn
       title: 驾校宝典
       avatar: /images/uploads/1616421595370-wallhaven-q6ov7d.jpg
+    - title: 醉浪の博客
+      link: https://blog.zuilang.tk/
+      avatar: https://image.zuilang.tk/avatar/avatar.png
+      intro: 一只喜欢七彩球的枯叶蝶
